--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>The first day in October has been quite boring so far.</p>
 
 <h2>Important Dates</h2>
-<p><i>October 1, 2024</i> - Our first commit</p>
+<p><i>October 1, 2024</i> - our first commit</p>
 
 <h2>Links</h2>
 <p>Here is a link to my github profile: <a href="https://github.com/blanob">blanob</a></p>
