--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 <body>
 
-<h1>Hello World</h1>
-<p>The first day in October has been quite boring so far.</p>
+<h2>Did someone say ... cookies?</h2>
+<p>No, we don't use any cookies on this site.</p>
 
 <h2>Important Dates</h2>
 <p><i>October 1, 2024</i> - our first commit</p>
-<p><i>October 14, 2024</i> - added a <a href="https://https://blanob.github.io/about">new page</a> using a Jekyll theme: <a href="https://github.com/pages-themes/minimal">Minimal</a></p>
+<p><i>October 14, 2024</i> - added a <a href="https://blanob.github.io/about">new page</a> using a Jekyll theme: <a href="https://github.com/pages-themes/minimal">Minimal</a></p>
 
 <h2>Links</h2>
-<p>Here is a link to my github profile: <a href="https://github.com/blanob">blanob</a></p>
+<p>Here is a link to my github profile: <a href="https://github.com/blanob">@blanob</a></p>
 
 </body>
 </html>
