--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <h2>Important Dates</h2>
 <p><i>October 1, 2024</i> - our first commit</p>
 <p><i>October 14, 2024</i> - added a <a href="https://blanob.github.io/about">new page</a> using a Jekyll theme: <a href="https://github.com/pages-themes/minimal">Minimal</a></p>
+<p><i>October 15, 2024</i> - some small changes
 
 <h2>Links</h2>
 <p>Here is a link to my github profile: <a href="https://github.com/blanob">@blanob</a></p>
