--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 
 <body>
 
-<h2>Did someone say ... cookies?</h2>
-<p>No, we don't use any cookies on this site.</p>
+<h2>Welcome to home page!</h2>
+<p>Nothing to see here.</p>
 
-<h2>Important Dates</h2>
+<h2>Log</h2>
 <p><i>October 1, 2024</i> - our first commit</p>
-<p><i>October 14, 2024</i> - added a <a href="https://blanob.github.io/about">new page</a> using a Jekyll theme: <a href="https://github.com/pages-themes/minimal">Minimal</a></p>
+<p><i>October 14, 2024</i> - <a href="https://blanob.github.io/about">about</a> page</p>
 <p><i>October 15, 2024</i> - some small changes
+<p><i>January 16, 2025</i> - some changes
 
-<h2>Links</h2>
+<h2>Link</h2>
 <p>Here is a link to my github profile: <a href="https://github.com/blanob">@blanob</a></p>
 
 </body>
