--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
 <body>
 
-<h2>Welcome to home page!</h2>
-<p>Nothing to see here.</p>
-
+<h2>INT. BOARD ROOM. DAY.</h2>
+<p>A NAKED MAN lies face up, unconscious on a large oak table. The room around him is comfortable but sterile. There are no windows and the only light buzzes from the florescent panels above. Pastel prints line the beige walls.</p>
+<p>This is MARK, mid 30’s. He’s tall and thin, his hair neatly combed, his breath slow but even.</p>
+<p>Suddenly, Mark’s eyes shoot open and he bolts to a sitting position. He gasps as his eyes dart around the room.</p>
+<p>For a very long moment, all is quiet.</p>
+  
 <h2>Log</h2>
 <p><i>October 1, 2024</i> - our first commit</p>
 <p><i>October 14, 2024</i> - <a href="https://blanob.github.io/about">about</a> page</p>
