--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
     <div class="container">
         <h1>404</h1>
         <p class="emoji">😕</p>
-        <p>Oops! The page you're looking for doesn't exist.</p>
+        <p>Oops! Nothing to see here.</p>
         <p><a href="https://blanob.github.io">Go back home</a></p>
     </div>
 </body>
