--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <p><i>October 14, 2024</i> - <a href="https://blanob.github.io/about">about</a> page</p>
 <p><i>October 15, 2024</i> - some small changes
 <p><i>January 16, 2025</i> - some changes
+<p><i>March 19, 2025</i> - some updates to <a href="https://blanob.github.io/about">about</a> page</p>
 
 <h2>Link</h2>
-<p>Here is a link to my github profile: <a href="https://github.com/blanob">@blanob</a></p>
+<p>Here is a link to my github page <a href="https://github.com/blanob">@blanob</a></p>
 
 </body>
 </html>
