--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   
 <h2>Log</h2>
 <p><i>October 1, 2024</i> - our first commit</p>
-<p><i>October 14, 2024</i> - <a href="https://blanob.github.io/about">about</a> page</p>
-<p><i>October 15, 2024</i> - some small changes
-<p><i>January 16, 2025</i> - some changes
+<p><i>October 14, 2024</i> - add <a href="https://blanob.github.io/about">about</a> page</p>
+<p><i>October 15, 2024</i> - some updates</p>
+<p><i>January 16, 2025</i> - some updates</p>
 <p><i>March 19, 2025</i> - some updates to <a href="https://blanob.github.io/about">about</a> page</p>
-
+<p><i>March 21, 2025</i> - upload ucl-stat9 <a href="https://blanob.github.io/assets/availability-analysis.html">final report</a></p>
+  
 <h2>Link</h2>
 <p>Here is a link to my github page <a href="https://github.com/blanob">@blanob</a></p>
 
