--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <title>blanob.github.io</title>
-<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body>
