--- a/404.html
+++ b/404.html
@@ -1,55 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>404 Not Found</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f8f9fa;
-            color: #333;
-        }
-        .container {
-            text-align: center;
-        }
-        h1 {
-            font-size: 100px;
-            margin: 0;
-            color: #007bff;
-        }
-        p {
-            font-size: 24px;
-            margin: 10px 0;
-        }
-        a {
-            text-decoration: none;
-            color: #007bff;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-        a:hover {
-            color: #0056b3;
-        }
-        .emoji {
-            font-size: 60px;
-        }
-    </style>
+<title>404 Not Found</title>
 </head>
 <body>
-    <div class="container">
-        <h1>404</h1>
-        <p class="emoji">😕</p>
-        <p>Oops! Nothing to see here.</p>
-        <p><a href="https://blanob.github.io">Go back home</a></p>
-    </div>
+<h1>404 Not Found</h1>
+<p>The requested URL was not found :(</p>
+<p>Get me <a href="https://blanob.github.io">home</a>.</p>
 </body>
 </html>
