--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 <p><i>October 15, 2024</i> - some updates</p>
 <p><i>January 16, 2025</i> - some updates</p>
 <p><i>March 19, 2025</i> - some updates to <a href="https://blanob.github.io/about">about</a> page</p>
-<p><i>March 21, 2025</i> - upload ucl-stat0009 <a href="https://blanob.github.io/assets/availability-analysis.html">final report</a></p>
+<p><i>March 21, 2025</i> - upload ucl-stat0009 <a href="https://blanob.github.io/assets/availability-analysis.html">report</a></p>
 <p><i>May 1, 2025</i> - upload ucl-stat0045 <a href="https://blanob.github.io/assets/data-ethics.pdf">essay</a></p>
+<p><i>May 28, 2025</i> - upload ucl-stat0045 <a href="https://blanob.github.io/assets/anova.pdf">report</a></p>
 
 <hr>
 
