--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<title>blanob.github.io</title>
-<link rel="icon" type="image/x-icon" href="/favicon.png">
+<title>J. Tang</title>
 </head>
 
 <body>
+<p>
+<a href="favicon.png"><img src="favicon.png",
+height=150 align=center></a><b>J.</b>
 
+<a href="favicon.png"><img src="favicon.png",
+height=150 align=center></a><b>Donald</b>
+
+<a href="favicon.png"><img src="favicon.png",
+height=150 align=center></a><b>Tang</b>
+
+<hr>
+  
 <h2>INT. BOARD ROOM. DAY.</h2>
 <p>A NAKED MAN lies face up, unconscious on a large oak table. The room around him is comfortable but sterile. There are no windows and the only light buzzes from the florescent panels above. Pastel prints line the beige walls.</p>
 <p>This is MARK, mid 30’s. He’s tall and thin, his hair neatly combed, his breath slow but even.</p>
