--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
 <body>
 <h1>404 Not Found</h1>
 <p>The requested URL was not found :(</p>
-<p>Get me <a href="https://blanob.github.io">home</a>.</p>
+<p>Take me <a href="https://blanob.github.io">home</a>.</p>
 </body>
 </html>
