--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <p>
-<a href="favicon.png"><img src="favicon.png",
+<a href="cam-small.jpg"><img src="cam-small.jpg",
 height=150 align=center></a><b>J.</b>
 
 <a href="favicon.png"><img src="favicon.png",
