--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a href="cam-small.jpg"><img src="cam-small.jpg",
 height=150 align=center></a><b>J.</b>
 
-<a href="favicon.png"><img src="favicon.png",
+<a href="kyoto-small.jpg"><img src="kyoto-small.jpg",
 height=150 align=center></a><b>Donald</b>
 
 <a href="favicon.png"><img src="favicon.png",
