--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
 <title>J. Tang</title>
 </head>
 
-<body>
+<body bgcolor="#FFF1E0">
 <p>
 <a href="cam-small.jpg"><img src="cam-small.jpg",
 height=150 align=center></a><b>J.</b>
 
-<a href="kyoto-small.jpg"><img src="kyoto-small.jpg",
+<a href="favicon.png"><img src="favicon.png",
 height=150 align=center></a><b>Donald</b>
 
 <a href="favicon.png"><img src="favicon.png",
 height=150 align=center></a><b>Tang</b>
+
+<a href="favicon.png"><img src="favicon.png",
+height=150 align=center></a>
 
 <hr>
   
@@ -36,9 +39,10 @@ height=150 align=center></a><b>Tang</b>
 <p><i>May 28, 2025</i> - upload ucl-stat0045 <a href="https://blanob.github.io/assets/anova.pdf">report</a></p>
 
 <hr>
-
+  
 <h2>Link</h2>
-<p>Here is a link to my github page <a href="https://github.com/blanob">@blanob</a></p>
-
+<p>To GitHub homepage <a href="https://github.com/blanob">@blanob</a></p>
+  
+Page last updated: 4th October 2025.
 </body>
 </html>
