--- a/404.html
+++ b/404.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>404 Not Found</title>
-</head>
-<body>
+---
+layout: default
+title: "404 Not Found"
+permalink: /404.html
+nositetitle: true
+---
+
 <h1>404 Not Found</h1>
+
 <p>The requested URL was not found :(</p>
-<p>Take me <a href="https://blanob.github.io">home</a>.</p>
-</body>
-</html>
