--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ permalink: /404.html
 nositetitle: true
 ---
 
-<h1>404 Not Found</h1>
+<h1 class="title">404 Not Found</h1>
 
 <p>The requested URL was not found :(</p>
