--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,16 @@
 
 <body bgcolor="#FFF1E0">
 
+<p>I am a postgraduate student in the <a href="https://ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the University of Melbourne, Australia. I obtained my Bachelor's degree from the <a href="https://www.ucl.ac.uk/statistics/">Department of Statistical Science</a> at UCL in 2025.
+  
 <hr>
 
 <pre>
-Jinzhou Tang                                   School of Mathematics and Statistics
-jinzhou.tang[at]student.unimelb.edu.au         The University of Melbourne, Parkville VIC 3010, Australia
+Jinzhou Tang
+jinzhou.tang[at]student.unimelb.edu.au               School of Mathematics and Statistics
+                                                     The University of Melbourne, Parkville VIC 3010, Australia
+jinzhou.tang.22[at]ucl.ac.uk                         Department of Statistical Science
+                                                     University College London, London WC1E 7HB
 </pre>
 
 <hr>
