--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,11 @@
 
 <pre>
 Jinzhou Tang
-jinzhou.tang[at]student.unimelb.edu.au               School of Mathematics and Statistics
+--
+Email: jinzhou.tang[at]student.unimelb.edu.au        School of Mathematics and Statistics
                                                      The University of Melbourne, Parkville VIC 3010, Australia
-jinzhou.tang.22[at]ucl.ac.uk                         Department of Statistical Science
+--
+Email: jinzhou.tang.22[at]ucl.ac.uk                  Department of Statistical Science
                                                      University College London, London WC1E 7HB
 </pre>
 
