--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ Email: jinzhou.tang[at]student.unimelb.edu.au        School of Mathematics and S
                                                      The University of Melbourne, Parkville VIC 3010, Australia
 --
 Email: jinzhou.tang.22[at]ucl.ac.uk                  Department of Statistical Science
-                                                     University College London, London WC1E 7HB
+                                                     University College London, London WC1E 7HB, UK
 </pre>
 
 <hr>
