--- a/contact.html
+++ b/contact.html
@@ -23,5 +23,6 @@ Email: jinzhou.tang.22[at]ucl.ac.uk                  Department of Statistical S
 <hr>
   
 Page last updated: November 7, 2025.
+<a href="https://blanob.github.io/contact_zh">Chinese</a>
 </body>
 </html>
