--- a/contact_zh.html
+++ b/contact_zh.html
@@ -6,12 +6,12 @@
 
 <body bgcolor="#FFF1E0">
 
-<p>我是澳大利亚墨尔本大学<a href="https://ms.unimelb.edu.au/">数学与统计学院</a>的研究生。我于 2025 年在伦敦大学学院<a href="https://www.ucl.ac.uk/statistics/">统计科学系</a>获得学士学位。
+<p>我是澳大利亚墨尔本大学<a href="https://ms.unimelb.edu.au/">数学与统计学院</a>的研究生。在这之前，我在伦敦大学学院<a href="https://www.ucl.ac.uk/statistics/">统计科学系</a>获得学士学位。
   
 <hr>
 
 <pre>
-Jinzhou Tang
+唐锦周
 --
 Email: jinzhou.tang[at]student.unimelb.edu.au        School of Mathematics and Statistics
                                                      The University of Melbourne, Parkville VIC 3010, Australia
