--- a/contact_zh.html
+++ b/contact_zh.html
@@ -22,6 +22,8 @@ Email: jinzhou.tang.22[at]ucl.ac.uk                  Department of Statistical S
 
 <hr>
   
-页面最后更新时间：2025 年 11 月 7 日。
+<p>页面最后更新时间：2025 年 11 月 7 日。</p>
+
+<p><a href="https://blanob.github.io/contact">en</a>/zh</p>
 </body>
 </html>
