--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@ Email: jinzhou.tang.22[at]ucl.ac.uk                  Department of Statistical S
 
 <hr>
   
-Page last updated: November 7, 2025.
+<p>Page last updated: November 7, 2025.</p>
+<p>en/<a href="https://blanob.github.io/contact_zh">zh</a></p>
 </body>
 </html>
