--- a/contact_zh.html
+++ b/contact_zh.html
@@ -6,7 +6,7 @@
 
 <body bgcolor="#FFF1E0">
 
-<p>我是澳大利亚墨尔本大学<a href="https://ms.unimelb.edu.au/">数学与统计学院</a>的研究生。在这之前，我在伦敦大学学院<a href="https://www.ucl.ac.uk/statistics/">统计科学系</a>获得学士学位。
+<p>我是墨尔本大学<a href="https://ms.unimelb.edu.au/">数学与统计学院</a>的研究生。在此之前，我在伦敦大学学院<a href="https://www.ucl.ac.uk/statistics/">统计学系</a>获得学士学位。
   
 <hr>
 
