--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 
 <body bgcolor="#FFF1E0">
 
-<p>I am a postgraduate student in the <a href="https://ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the University of Melbourne, Australia. I obtained my Bachelor's degree from the <a href="https://www.ucl.ac.uk/statistics/">Department of Statistical Science</a> at UCL in 2025.
+<p>I am a postgraduate student in the <a href="https://ms.unimelb.edu.au/">School of Mathematics and Statistics</a> at the University of Melbourne, Australia. I obtained my Bachelor's degree from the <a href="https://www.ucl.ac.uk/statistics/">Department of Statistical Science</a> at University College London in 2025.
   
 <hr>
 
