--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@ nositetitle: true
 
 <h1 class="title">404 Not Found</h1>
 
-<img src="no_img.gif">
+<img src="assets/no_img.gif">
 
 <p>The requested URL was not found :(</p>
