--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@ nositetitle: true
 
 <h1 class="title">404 Not Found</h1>
 
-<img src="https://blanob.github.io/assets/no_img.gif"> <!-- src="assets/no_img.gif" doesn't work. how so? -->
+<img src="https://blanob.github.io/assets/no_img.gif" class="left-align-image"> <!-- src="assets/no_img.gif" doesn't work. how so? -->
 
 <p>The requested URL was not found :(</p>
